Custom Ant Design theme

--- a/autocorrect-tauri/src/App.css
+++ b/autocorrect-tauri/src/App.css
@@ -2,9 +2,5 @@
 }
 
 .toolbar {
-  @apply bg-gray-50 border-b border-t border-gray-200 h-16 px-4;
-}
-.toolbar .btn,
-.toolbar .dropdown {
-  @apply py-1.5 leading-5;
+  @apply bg-white border-b border-gray-200 h-16 px-4;
 }
