--- a/autocorrect-tauri/src/App.scss
+++ b/autocorrect-tauri/src/App.scss
@@ -4,4 +4,8 @@
 .toolbar {
   @apply bg-white border-b border-gray-200 h-16 px-4;
   @apply dark:bg-gray-800 dark:text-white dark:border-gray-900;
+
+  a {
+    @apply text-gray-600 hover:text-gray-800 dark:text-gray-400 dark:hover:text-gray-300;
+  }
 }
