--- a/autocorrect-website/src/style.scss
+++ b/autocorrect-website/src/style.scss
@@ -8,20 +8,25 @@ html {
 
 body {
   @apply text-sm text-center pt-12;
+  @apply bg-white text-black;
+  @apply dark:bg-black  dark:text-white;
 }
 
 .navbar {
   @apply bg-white shadow fixed top-0 left-0 right-0 z-50;
+  @apply dark:bg-gray-950 dark:border-b dark:border-gray-800;
 
   .navbar-brand {
     @apply flex items-center flex-shrink-0 py-2;
   }
 
   .navbar-item {
-    @apply inline-flex items-center px-4 py-2 h-8 text-sm rounded font-medium text-gray-900;
+    @apply inline-flex items-center px-4 py-2 h-8 space-x-1 text-sm rounded font-medium text-gray-900;
+    @apply dark:text-gray-200;
 
     &-active {
       @apply bg-gray-200;
+      @apply dark:bg-gray-800;
     }
   }
 }
@@ -40,6 +45,7 @@ body {
 
 .editor-wraper {
   @apply rounded-sm border border-gray-300 shadow;
+  @apply dark:border-gray-700;
 }
 
 select {
@@ -55,13 +61,16 @@ select {
 
 select {
   @apply block pl-3 pr-4 py-1.5 text-base shadow-sm border border-gray-300 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm rounded-md;
+  @apply dark:bg-gray-950 dark:border-gray-700 dark:focus:ring-blue-700 dark:focus:border-blue-700;
 }
 
 button {
-  @apply rounded bg-white px-4 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50;
+  @apply rounded bg-white px-4 py-1.5 text-sm text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50;
+  @apply dark:bg-gray-950 dark:text-gray-100 dark:ring-gray-700 dark:hover:bg-gray-900 dark:active:bg-gray-950;
 
   &.btn-primary {
-    @apply bg-blue-600 ring-blue-800 hover:to-blue-500 text-white active:bg-blue-700;
+    @apply bg-blue-600 ring-blue-800 hover:bg-blue-500 text-white active:bg-blue-700;
+    @apply dark:bg-blue-950 dark:ring-blue-700 dark:hover:bg-opacity-40 dark:text-white dark:active:bg-blue-950;
   }
 }
 
@@ -69,19 +78,23 @@ button {
   @apply border-0 text-lg shadow bg-gray-700 text-white rounded-md leading-none py-2 px-6 lg:py-3 lg:px-12 block whitespace-nowrap;
 }
 .btn-install {
-  @apply bg-blue-600;
+  @apply bg-blue-600 border border-blue-600 shadow-sm;
+  @apply dark:bg-blue-950 dark:border-blue-800;
 }
 .btn-install2 {
-  @apply bg-gray-800;
+  @apply bg-gray-800 border border-gray-800 shadow-sm;
+  @apply dark:bg-gray-900 dark:border-gray-700;
 }
 .btn-download {
-  @apply bg-green-600;
+  @apply bg-green-600 border border-green-600 shadow-sm;
+  @apply dark:bg-green-950 dark:border-green-800;
 }
 .btn-github {
 }
 
 .message {
   @apply ml-3 text-green-600;
+  @apply dark:text-green-700;
 }
 
 .codeblock-wrap {
@@ -90,4 +103,5 @@ button {
 
 .codeblock {
   @apply p-4 text-gray-800 bg-gray-100 rounded hover:select-all;
+  @apply dark:text-gray-200 dark:bg-gray-900;
 }
