Fix tabs.scss typo

--- a/autocorrect-website/src/tabs.scss
+++ b/autocorrect-website/src/tabs.scss
@@ -21,7 +21,7 @@
     @apply ml-3 select-none;
 
     &:hover {
-        @apply bg-gray-100 dark:hover-gray-900;
+        @apply bg-gray-100 dark:bg-gray-900;
     }
 }
 
