--- a/autocorrect-website/src/style.scss
+++ b/autocorrect-website/src/style.scss
@@ -43,7 +43,7 @@ body {
     }
 }
 
-.editor-wraper {
+.editor-wrapper {
     @apply rounded-sm border border-gray-300 shadow;
     @apply dark:border-gray-700;
 }
